refactored for mail sender and a hidden folder.

--- a/.gitignore
+++ b/.gitignore
@@ -10,8 +10,11 @@
 /[Ll]ogs/
 /[Mm]emoryCaptures/
 
+HiddenData/
+HiddenData.meta
+
 # Never ignore Asset meta data
-!/[Aa]ssets/**/*.meta
+#!/[Aa]ssets/**/*.meta
 
 # Uncomment this line if you wish to ignore the asset store tools plugin
 # /[Aa]ssets/AssetStoreTools*
